--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,6 +29,6 @@ URL: https://github.com/wadpac/GGIR/, https://groups.google.com/forum/#!forum/Rp
 BugReports: https://github.com/wadpac/GGIR/issues
 License: Apache License (== 2.0) | file LICENSE
 Suggests: testthat, covr, knitr, rmarkdown, actilifecounts, ActCR, GGIRread, read.gt3x
-Imports: data.table, foreach, doParallel, signal, zoo, unisensR, ineq, methods, lubridate
+Imports: data.table, foreach, doParallel, signal, zoo, unisensR, ineq, methods, lubridate, pracma
 Depends: stats, utils, R (>= 3.5)
 VignetteBuilder: knitr
