--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,3 +59,4 @@ import(data.table)
 importFrom("methods", "is")
 importFrom("utils", "available.packages", "packageVersion", "help", "read.table")
 importFrom("lubridate", "as.interval", "intersect")
+importFrom("pracma", "trapz")
