package working and documented, first version

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,8 +2,16 @@
 
 export(aggregate_per_window)
 export(analyseSegment)
+export(fix_window_number)
+export(full_window_report)
+export(getValidDayIndices)
 export(loadRData)
 export(match_time_series)
+import(data.table)
 import(plyr)
+import(stats)
 importFrom(GGIR,POSIXtime2iso8601)
+importFrom(GGIR,extract_params)
 importFrom(GGIR,is.ISO8601)
+importFrom(data.table,fread)
+importFrom(methods,formalArgs)
