--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,12 @@
 Package: GGIRmatcher
-Title: What the Package Does (One Line, Title Case)
+Title: Matches GGIR Output With Additional Sensors
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
+    person("Jairo", "H. Migueles", , "jairo@jhmigueles.com", role = c("aut", "cre"),
+           comment = c(ORCID = "0000-0003-0366-6935"))
+Description: GGIRmatcher was developed to match time series GGIR part 5 output with time series extracted from an additional sensor at epoch level.
 License: Apache License (>= 2)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
+Depends: GGIR, data.table, plyr, methods, stats
