update package documentation and new handling of table output using base function tapply instead of plyr::ddply

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,3 +15,4 @@ importFrom(GGIR,extract_params)
 importFrom(GGIR,is.ISO8601)
 importFrom(data.table,fread)
 importFrom(methods,formalArgs)
+importFrom(plyr,rbind.fill)
