--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,9 @@ Package: GGIRmatcher
 Title: Matches GGIR Output With Additional Sensors
 Version: 0.0.0.9000
 Authors@R: 
-    person("Jairo", "H. Migueles", , "jairo@jhmigueles.com", role = c("aut", "cre"),
-           comment = c(ORCID = "0000-0003-0366-6935"))
+    c(person("Jairo", "H. Migueles", , "jairo@jhmigueles.com", role = c("aut", "cre"),
+           comment = c(ORCID = "0000-0003-0366-6935")),
+    person("PROFITH research group", role = c("fnd")))
 Description: GGIRmatcher was developed to match time series GGIR part 5 output with time series extracted from an additional sensor at epoch level.
 License: Apache License (>= 2)
 Encoding: UTF-8
