checks passing and some more files added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,5 +14,6 @@ importFrom(GGIR,POSIXtime2iso8601)
 importFrom(GGIR,extract_params)
 importFrom(GGIR,is.ISO8601)
 importFrom(data.table,fread)
+importFrom(lifecycle,deprecated)
 importFrom(methods,formalArgs)
 importFrom(plyr,rbind.fill)
