--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,13 +7,17 @@ Authors@R:
     person("PROFITH research group", role = c("fnd")))
 Maintainer: Jairo H Migueles <jairo@jhmigueles.com>
 Description: GGIRmatcher aims to match time series GGIR part 5 output with time series extracted from an additional sensor.
-License: Apache License (>= 2)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 Depends: methods, stats, R (>= 3.5)
-Imports: GGIR, data.table, plyr
+Imports: 
+    GGIR,
+    data.table,
+    plyr,
+    lifecycle
 Suggests: 
     knitr,
     rmarkdown
 VignetteBuilder: knitr
+License: MIT + file LICENSE
