testthat folder structure

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,7 +21,9 @@ Imports:
     lifecycle
 Suggests: 
     knitr,
-    rmarkdown
+    rmarkdown,
+    testthat (>= 3.0.0)
 VignetteBuilder: knitr
 License: MIT + file LICENSE
 LazyData: true
+Config/testthat/edition: 3
